Wed Feb 10 10:03:26 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DataReaderStateListener_T.h:
        * connectors/dds4ccm/impl/ndds/DataReaderStateListener_T.cpp:
          Implemented thread switch for DataReaderStateListener.

        * connectors/dds4ccm/tests/SLOneByOne/Base/SL_OneByOne_Base.idl:
          Layout changes.

Wed Feb 10 09:36:55 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL_Test/IDL3_Plus/KitchenSink.idl:
          Extended native example

        * connectors/dds4ccm/examples/Hello/Connector/Hello_Connector.mpc:
          Added the exec export flags to get svn head to compile

        * connectors/dds4ccm/examples/Hello/Base/Hello_Base.idl:
          Added another pragma

Wed Feb 10 08:12:55 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DataReaderHandler_T.h:
        * connectors/dds4ccm/impl/ndds/DataReaderHandler_T.cpp:
          Preparing thread switch DataReaderStateListener_T.

        * connectors/dds4ccm/impl/ndds/Publisher.cpp:
          Code alignment.

        * connectors/dds4ccm/impl/ndds/PublisherListener_T.cpp:
          Check on error listeners pointer.

        * connectors/dds4ccm/tests/SLOneByOne/Receiver/SL_OneByOne_Receiver_exec.h:
        * connectors/dds4ccm/tests/SLOneByOne/Receiver/SL_OneByOne_Receiver_exec.cpp:
          Optimized logging. Code alignment.

Wed Feb  10 8:10:37 UTC 2010  Marijke Hengstmengelt  <mhengstmengel@remedy.nl>

        * connectors/dds4ccm/performance-tests/Keyed/Receiver/Perf_Keyed_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/performance-tests/Keyed/Receiver/Perf_Keyed_Test_Receiver_exec.h:
        Removed unused parameter.

Tue Feb  9 22:57:04 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * connectors/dds4ccm/examples/Hello/Connector/Hello_Connector.mpc:

          Added generation of connector export header file, and cosmetic
          changes.
