@@ -1,34 +1,5 @@
 // -*- C++ -*-
-//
 // $Id$
-
-/**
- * Code generated by the The ACE ORB (TAO) IDL Compiler v1.7.3
- * TAO and the TAO IDL Compiler have been developed by:
- *       Center for Distributed Object Computing
- *       Washington University
- *       St. Louis, MO
- *       USA
- *       http://www.cs.wustl.edu/~schmidt/doc-center.html
- * and
- *       Distributed Object Computing Laboratory
- *       University of California at Irvine
- *       Irvine, CA
- *       USA
- *       http://doc.ece.uci.edu/
- * and
- *       Institute for Software Integrated Systems
- *       Vanderbilt University
- *       Nashville, TN
- *       USA
- *       http://www.isis.vanderbilt.edu/
- *
- * Information about TAO is available at:
- *     http://www.cs.wustl.edu/~schmidt/TAO.html
- **/
-
-// TAO_IDL - Generated from
-// be/be_codegen.cpp:1217
 
 #ifndef HELLO_RECEIVER_EXEC_H_
 #define HELLO_RECEIVER_EXEC_H_
